<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/yellowbackground"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="500dp"
            android:layout_margin="30dp"

            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="480dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp"
                >


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/black_border"
                    android:drawableLeft="@drawable/id_card_24px"
                    android:drawablePadding="12dp"
                    android:hint="@string/name"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:autofillHints="name"/>

                <EditText
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_border"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_border"
                    android:drawableLeft="@drawable/baseline_alternate_email_24"
                    android:drawablePadding="12dp"
                    android:hint="@string/e_mail"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/black_border"
                    android:drawableLeft="@drawable/password_24px"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="200sp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/black"
                    android:shadowRadius="10"
                    android:text="@string/sign_up1"
                    android:textSize="20sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="385dp"
            android:layout_height="110dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.615"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/screenshot_12112024_225713" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="134dp"
            android:layout_height="109dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/screenshot_12112024_001147" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionlogin"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>